Handle booking feature
